<resources>
    <string name="app_name">SomeFunc_App</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="username">User Name</string>
    <string name="password">PassWord</string>
    <string name="don_t_have_account">You do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="go">Go</string>
    <string name="recyclerView" translatable="false">RecyclerView</string>

    <string name="kotlin_title" translatable="false">Kotlin</string>
    <string name="kotlin_url" translatable="false">https://koenig-media.raywenderlich.com/uploads/2019/01/Kotlin.png</string>
    <string name="kotlin_desc" translatable="false">We all know Kotlin is just the best. Kotlin has both object-oriented and functional
        constructs. It can be used for both client side applications and server side applications. Our site is rich of
        Kotlin tutorials.
        Do read them if you want to learn Kotlin :]
    </string>
    <string name="android_name" translatable="false">Android</string>
    <string name="android_url" translatable="false">https://koenig-media.raywenderlich.com/uploads/2019/01/android_rw_flag_2.png</string>
    <string name="android_desc" translatable="false">Android is a mobile operating system by Google. Development for android platform is even
        more fun with Kotlin. We have an awesome lineup of Android Tutorials that too based on Kotlin. Enjoy.. :]
    </string>
    <string name="rxkotlin_name" translatable="false">RxKotlin</string>
    <string name="rxkotlin_url" translatable="false">https://koenig-media.raywenderlich.com/uploads/2019/01/RxSwift.png</string>
    <string name="rxkotlin_desc" translatable="false">The RxKotlin is an implementation of a Reactive Stream specification. Kotlin adds more
        fun to reactive programming as it adds convenient extension functions to RxJava. Go ahead and have a look to our
        Rx tutorial. :]
    </string>
    <string name="kitura_name" translatable="false">Kitura</string>
    <string name="kitura_url" translatable="false">https://koenig-media.raywenderlich.com/uploads/2019/01/kitura.png</string>
    <string name="kitura_desc" translatable="false">Kitura is a server-side Swift framework for building iOS backends and web applications.
        This framework creates REST APIs that can be invoked from the iOS applications. We have Kitura tutorial too :]
    </string>
    <string name="error_message" translatable="false">Error while loading image.</string>
    <string name="home" translatable="false">Home</string>
    <string name="image_failed_loading" translatable="false">Image failed loading</string>
    <string name="demo_string_pinch_zoom" translatable="false">This is my sample text for pinch zoom demo, you can zoom in and out using pinch zoom, thanks</string>

    <string name="simple" translatable="false">Simple</string>
    <string name="map" translatable="false">Map</string>
    <string name="zip" translatable="false">Zip</string>
    <string name="timer" translatable="false">Time</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="concat" translatable="false">Concat</string>
    <string name="merge" translatable="false">Merge</string>
    <string name="delay" translatable="false">Delay</string>
    <string name="doSomeWork" translatable="false">doSomeWork</string>
    <string name="result" translatable="false">Result</string>
    <string name="weather" translatable="false">Weather</string>
    <string name="search" translatable="false">Search</string>
    <string name="rx" translatable="false">Rx</string>
    <string name="coroutines" translatable="false">Coroutines</string>

    <string name="single_network_call" translatable="false">Single Network Call</string>
    <string name="series_network_calls" translatable="false">Series Network Calls</string>
    <string name="parallel_network_calls" translatable="false">Parallel Network Calls</string>
    <string name="room_database" translatable="false">Room Database</string>
    <string name="timeout" translatable="false">Timeout</string>
    <string name="try_catch_error" translatable="false">Try-Catch Error</string>
    <string name="exception_handler" translatable="false">ExceptionHandler</string>
    <string name="ignore_error_and_continue" translatable="false">Ignore Error And Continue</string>
    <string name="long_running_task" translatable="false">Long Running Task</string>
    <string name="two_long_running_tasks" translatable="false">Two Long Running Tasks</string>


    <string name="current_temperature" translatable="false">Nhiệt độ hiện tại</string>
    <string name="temp_format" translatable="false">%s°C</string>


    <string name="name_contain_special_character" translatable="false">"Chỉ hỗ trợ kí tự a-z, A-Z, 0-9, -, _ và dấu cách"</string>
    <string name="name_is_blank_error" translatable="false">"Thông tin Họ và tên đang chỉ chứa kí tự trắng. Vui lòng nhập lại"</string>
    <string name="input_phone_number" translatable="false">Số điện thoại có độ dài từ 9 đến 15 kí tự</string>
    <string name="fill_number_phone_please" translatable="false">Vui lòng điền số điện thoại</string>
    <string name="error_validation_room_name" translatable="false">Tên phòng có độ dài 30 ký tự</string>
    <string name="error_validation_room_name_empty" translatable="false">Bạn không được để trống Tên phòng</string>
    <string name="button_delete" translatable="false">Xóa</string>
    <string name="non_data" translatable="false">--</string>
    <string name="title_value" translatable="false">Index</string>
    <string name="analog_clock_text" translatable="false">Analog clock view!</string>
    <string name="delete" translatable="false">delete</string>
    <string name="room_db" translatable="false">RoomDB</string>
    <string name="label_count" translatable="false">Count</string>
    <string name="label_duration" translatable="false">Duration</string>
    <string name="view_pager" translatable="false">ViewPager</string>
    <string name="title" translatable="false">Title</string>
    <string name="description" translatable="false">Description</string>
    <string name="priority" translatable="false">Priority</string>
    <string name="room_rx_mvvm" translatable="false">RoomRxMVVM</string>
    <string name="room_coroutines" translatable="false">Room Coroutines</string>
    <string name="save" translatable="false">Save</string>
    <string name="hint_word" translatable="false">Word</string>
    <string name="ball_1" translatable="false">Bóng_1</string>
    <string name="ball_2" translatable="false">Bóng_2</string>
    <string name="channel_name" translatable="false">My notification</string>
    <string name="channel_description" translatable="false">Much longer text that cannot fit one line…</string>
    <string name="channel_description_1" translatable="false">Much longer text that cannot fit one line…</string>

    <!--Text in Json File-->
    <string name="json_home" translatable="false">Home</string>
    <string name="json_content" translatable="false">Content</string>
    <string name="json_about" translatable="false">About</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close\n</string>
    <string name="main_animation_screen" translatable="false">Main animation screen</string>
    <string name="bubble_animation_screen" translatable="false">Bubble animation screen</string>
    <string name="bubble_emitter_animation_screen" translatable="false">Bubble emitter animation screen</string>

    <string-array name="title_fragment_json">
        <item>@string/json_home</item>
        <item>@string/json_content</item>
        <item>@string/json_about</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scalars">Scalars</string>
    <string name="serialization">Serialization</string>
    <string name="moshi">Moshi</string>
    <string name="gson">Gson</string>
    <string name="coroutine">Coroutine</string>
</resources>